fdo#49677: ODF export: always add xlink:type attribute

The xlink:type was optional on text:a and draw:a elements in ODF 1.1 but
is mandatory in ODF 1.2

Change-Id: Ifc7301ed1b0120d31a156751888dea1a55e952fe